completed download ability

--- a/sierpinski.css
+++ b/sierpinski.css
@@ -1,13 +1,21 @@
-.selections {
-  text-align: center
-
-}
 
 .canvas {
-  text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
 }
+
 .heading {
   float: left;
   font-size: 3em;
   color: green;
+}
+
+button {
+  float: right;
+  margin: 5px 100px 5px 5px;
+}
+
+.selections {
+  float: right
+
 }
